fixed alignment issues

--- a/src/components/HomeTab/HomeTab.module.css
+++ b/src/components/HomeTab/HomeTab.module.css
@@ -1,14 +1,7 @@
 .home_tab {
     display: flex;
-    justify-content: center;
-    gap: 3rem;
-}
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
 
-img {
-    width: 30%;
-    border-radius: 2px;
-}
-
-.text_container {
-    width: 30%;
 }
