--- a/src/components/TopBar/TopBar.module.css
+++ b/src/components/TopBar/TopBar.module.css
@@ -11,7 +11,7 @@
 }
 
 .top_bar {
-    padding: rem;
+    margin: 2rem;
 }
 
 .top_bar_content {
